--- a/app/components/sidebar/SidebarMenuItem.scss
+++ b/app/components/sidebar/SidebarMenuItem.scss
@@ -6,7 +6,6 @@
   width: $sidebar-width - $sidebar-minimized-category-width;
   height: $sidebar-button-height;
   color: white;
-  font-family: $font-thin;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -29,12 +28,12 @@
 .title {
   font-size: 18px;
   line-height: 1.5em;
-  font-family: $font-thin;
+  font-family: $font-regular;
 }
 
 .info {
   font-size: 14px;
-  font-family: $font-ultralight;
+  font-family: $font-light;
   letter-spacing: 1px;
   opacity: 0.7;
   color: #fafbfc;
