--- a/app/components/wallet/WalletSendForm.scss
+++ b/app/components/wallet/WalletSendForm.scss
@@ -17,4 +17,5 @@
 
 .submitButton {
   width: 100%;
+  text-transform: uppercase;
 }
