--- a/app/components/widgets/Transaction.scss
+++ b/app/components/widgets/Transaction.scss
@@ -68,5 +68,5 @@
   margin-top: 20px;
   align-self: flex-end;
   font-family: $font-regular;
-  font-size: 20px;
+  font-size: 24px;
 }
